--- a/src/main/resources/templates/teacher_profile.html
+++ b/src/main/resources/templates/teacher_profile.html
@@ -10,7 +10,7 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
 
    <!-- custom css file link  -->
-   <link rel="stylesheet" href="css/style.css">
+   <link rel="stylesheet" href="../static/css/style.css">
 
 </head>
 <body>
@@ -19,7 +19,7 @@
    
    <section class="flex">
 
-      <a href="../../../../../../../../../../Downloads/desgin/home.html" class="logo">Educa.</a>
+      <a href="home.html" class="logo">Educa.</a>
 
       <form action="search.html" method="post" class="search-form">
          <input type="text" name="search_box" required placeholder="search courses..." maxlength="100">
@@ -34,13 +34,13 @@
       </div>
 
       <div class="profile">
-         <img src="images/pic-1.jpg" class="image" alt="">
+         <img src="../static/images/pic-1.jpg" class="image" alt="">
          <h3 class="name">shaikh anas</h3>
          <p class="role">studen</p>
          <a href="profile.html" class="btn">view profile</a>
          <div class="flex-btn">
-            <a href="login.html" class="option-btn">login</a>
-            <a href="register.html" class="option-btn">register</a>
+            <a href="./login.html" class="option-btn">login</a>
+            <a href="./register.html" class="option-btn">register</a>
          </div>
       </div>
 
@@ -55,18 +55,18 @@
    </div>
 
    <div class="profile">
-      <img src="images/pic-1.jpg" class="image" alt="">
+      <img src="../static/images/pic-1.jpg" class="image" alt="">
       <h3 class="name">shaikh anas</h3>
       <p class="role">studen</p>
       <a href="profile.html" class="btn">view profile</a>
    </div>
 
    <nav class="navbar">
-      <a href="../../../../../../../../../../Downloads/desgin/home.html"><i class="fas fa-home"></i><span>home</span></a>
-      <a href="../../../../../../../../../../Downloads/desgin/about.html"><i class="fas fa-question"></i><span>about</span></a>
-      <a href="../../../../../../../../../../Downloads/desgin/courses.html"><i class="fas fa-graduation-cap"></i><span>courses</span></a>
+      <a href="home.html"><i class="fas fa-home"></i><span>home</span></a>
+      <a href="about.html"><i class="fas fa-question"></i><span>about</span></a>
+      <a href="courses.html"><i class="fas fa-graduation-cap"></i><span>courses</span></a>
       <a href="teachers.html"><i class="fas fa-chalkboard-user"></i><span>teachers</span></a>
-      <a href="../../../../../../../../../../Downloads/desgin/contact.html"><i class="fas fa-headset"></i><span>contact us</span></a>
+      <a href="contact.html"><i class="fas fa-headset"></i><span>contact us</span></a>
    </nav>
 
 </div>
@@ -77,7 +77,7 @@
 
    <div class="details">
       <div class="tutor">
-         <img src="images/pic-2.jpg" alt="">
+         <img src="../static/images/pic-2.jpg" alt="">
          <h3>john deo</h3>
          <span>developer</span>
       </div>
@@ -99,7 +99,7 @@
 
       <div class="box">
          <div class="thumb">
-            <img src="images/thumb-1.png" alt="">
+            <img src="../static/images/thumb-1.png" alt="">
             <span>10 videos</span>
          </div>
          <h3 class="title">complete HTML tutorial</h3>
@@ -108,7 +108,7 @@
 
       <div class="box">
          <div class="thumb">
-            <img src="images/thumb-2.png" alt="">
+            <img src="../static/images/thumb-2.png" alt="">
             <span>10 videos</span>
          </div>
          <h3 class="title">complete CSS tutorial</h3>
@@ -117,7 +117,7 @@
 
       <div class="box">
          <div class="thumb">
-            <img src="images/thumb-3.png" alt="">
+            <img src="../static/images/thumb-3.png" alt="">
             <span>10 videos</span>
          </div>
          <h3 class="title">complete javascript tutorial</h3>
@@ -126,7 +126,7 @@
 
       <div class="box">
          <div class="thumb">
-            <img src="images/thumb-4.png" alt="">
+            <img src="../static/images/thumb-4.png" alt="">
             <span>10 videos</span>
          </div>
          <h3 class="title">complete Boostrap tutorial</h3>
@@ -155,7 +155,7 @@
 </footer>
 
 <!-- custom js file link  -->
-<script src="js/script.js"></script>
+<script src="../static/js/script.js"></script>
 
    
 </body>
