--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -57,16 +57,16 @@
 
    <div class="profile" th:each="el : ${user}">
       <img src="../static/images/pic-1.jpg" class="image" alt="">
-      <!--         <h3 class="name" >Abylkhaiyrov Askar</h3>-->
+<!--      <h3 class="name" >Abylkhaiyrov Askar</h3>-->
       <h3 class="name" th:text="${el.name}"></h3>
-      <p class="role">student</p>
+      <p class="role" th:text="${el.roleUser}"></p>
       <a href="profile.html"
          th:href="'/profile'+ ${el.id}"
          class="btn">view profile</a>
    </div>
 
    <nav class="navbar">
-      <a href="home.html"><i class="fas fa-home"></i><span>home</span></a>
+      <a href="home.html" th:href="@{/main}"><i class="fas fa-home"></i><span>home</span></a>
       <a href="about.html"><i class="fas fa-question"></i><span>about</span></a>
       <a href="courses.html"><i class="fas fa-graduation-cap"></i><span>courses</span></a>
       <a href="teachers.html"><i class="fas fa-chalkboard-user"></i><span>teachers</span></a>
@@ -245,19 +245,14 @@
 
 
 
+<footer th:insert="footer"></footer>
 
 
+<!--<footer class="footer">-->
 
+<!--   &copy; copyright @ 2023 by <span>CREATED BY ABYLKHAIYROV & KUDAIBERGANOV</span> | all rights reserved!-->
 
-
-
-
-
-<footer class="footer">
-
-   &copy; copyright @ 2022 by <span>mr. web designer</span> | all rights reserved!
-
-</footer>
+<!--</footer>-->
 
 <!-- custom js file link  -->
 <script th:src="@{/js/script.js}" type="application/javascript" src="../static/js/script.js"></script>
