--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,14 +1,12 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="static/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,600,0,0" />
     <title>Registration Page</title>
     <style>
-        @import url("../static/reset.css");
+        /*@import url("../static/reset.css");*/
 
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
 
@@ -297,15 +295,11 @@
     </style>
 </head>
 <body>
-<div th:if="${param.success}">
-    <div class="alert alert-info">You've successfully registered
-        to our app!</div>
-</div>
 <div class="login-card-container">
     <div class="login-card">
         <div class="login-card-header">
-            <h1>Зарегистрироваться</h1>
-            <div>Пожалуйста, зарегистрируйтесь, чтобы использовать платформу</div>
+            <h1>Create account</h1>
+            <div>Please register to use the platform</div>
         </div>
         <form class="login-card-form"
               method="post"
@@ -337,6 +331,20 @@
                    th:if="${#fields.hasErrors('lastName')}">
                 </p>
             </div>
+
+            <div class="form-item">
+                <span class="form-item-icon material-symbols-rounded" for="username">person</span>
+                <input type="text"
+                       id="roleUser"
+                       name="roleUser"
+                       placeholder="Enter role"
+                       th:field="*{roleUser}"
+                />
+                <p th:errors="*{roleUser}" class="text-danger"
+                   th:if="${#fields.hasErrors('roleUser')}">
+                </p>
+            </div>
+
             <div class="form-item">
                 <span class="form-item-icon material-symbols-rounded" for="username">mail</span>
                 <input id="emailForm2"
